force-app/main/default/objects/Therapy__c/Therapy__c.object-meta.xml
<CustomObject>
    <label>Therapy</label>
    <nameField>
        <label>Therapy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Therapies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>