force-app/main/default/objects/Therapy__c/fields/Active_Therapy__c.field-meta.xml
<CustomField>
    <fullName>Active_Therapy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Therapy</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Active Therapies</relationshipLabel>
    <relationshipName>Active_Therapies</relationshipName>
    <type>Lookup</type>
</CustomField>