force-app/main/default/objects/Therapy__c/fields/Inactive_Therapies__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Therapies__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inactive_Therapies</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inactive Therapies</relationshipLabel>
    <relationshipName>Inactive_Therapies</relationshipName>
    <type>Lookup</type>
</CustomField>