force-app/main/default/objects/Therapy__c/fields/Manufacturer_Name__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Name__c</fullName>
    <label>Manufacturer Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All We Care</fullName>
            </value>
            <value>
                <fullName>B. Braun</fullName>
            </value>
            <value>
                <fullName>Coloplast</fullName>
            </value>
            <value>
                <fullName>Convatec</fullName>
            </value>
            <value>
                <fullName>Dansac</fullName>
            </value>
            <value>
                <fullName>Eakin / Pelican</fullName>
            </value>
            <value>
                <fullName>Eurotec</fullName>
            </value>
            <value>
                <fullName>Hollister</fullName>
            </value>
            <value>
                <fullName>Marlen</fullName>
            </value>
            <value>
                <fullName>OxMed</fullName>
            </value>
            <value>
                <fullName>Salt</fullName>
            </value>
            <value>
                <fullName>Welland</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>