force-app/main/default/objects/Therapy__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <label>Patient Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Therapies</relationshipLabel>
    <relationshipName>Therapies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>