force-app/main/default/objects/Therapy__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Manufacturer_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alterna</fullName>
            </value>
            <value>
                <fullName>Alterna Plus</fullName>
            </value>
            <value>
                <fullName>Assura</fullName>
            </value>
            <value>
                <fullName>Assura sense</fullName>
            </value>
            <value>
                <fullName>Aurum</fullName>
            </value>
            <value>
                <fullName>Aurum2</fullName>
            </value>
            <value>
                <fullName>Aurum Plus</fullName>
            </value>
            <value>
                <fullName>Aurum Xtra</fullName>
            </value>
            <value>
                <fullName>B.Braun stomacare gordel</fullName>
            </value>
            <value>
                <fullName>Brava</fullName>
            </value>
            <value>
                <fullName>Colomate</fullName>
            </value>
            <value>
                <fullName>Combihesive 2S</fullName>
            </value>
            <value>
                <fullName>CombiMate</fullName>
            </value>
            <value>
                <fullName>CombiMate extra</fullName>
            </value>
            <value>
                <fullName>Compact</fullName>
            </value>
            <value>
                <fullName>Confidence</fullName>
            </value>
            <value>
                <fullName>Confidence BE</fullName>
            </value>
            <value>
                <fullName>Confidence comfort</fullName>
            </value>
            <value>
                <fullName>Confidence Natural</fullName>
            </value>
            <value>
                <fullName>Conform2</fullName>
            </value>
            <value>
                <fullName>Consecura</fullName>
            </value>
            <value>
                <fullName>Conveen</fullName>
            </value>
            <value>
                <fullName>Corsinel</fullName>
            </value>
            <value>
                <fullName>Curvex</fullName>
            </value>
            <value>
                <fullName>Durahesive</fullName>
            </value>
            <value>
                <fullName>Eakin Dot</fullName>
            </value>
            <value>
                <fullName>Easiflex</fullName>
            </value>
            <value>
                <fullName>Esteem</fullName>
            </value>
            <value>
                <fullName>Esteem Plus</fullName>
            </value>
            <value>
                <fullName>Esteem Synergy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>