force-app/main/default/objects/Therapy__c/fields/Therapy_Type__c.field-meta.xml
<CustomField>
    <fullName>Therapy_Type__c</fullName>
    <label>Therapy Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stoma</fullName>
            </value>
            <value>
                <fullName>Urinary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>