force-app/main/default/objects/Therapy__c/recordTypes/Italy.recordType-meta.xml
<RecordType>
    <fullName>Italy</fullName>
    <active>true</active>
    <label>Italy</label>
</RecordType>