force-app/main/default/objects/Therapy__c/recordTypes/Portugal.recordType-meta.xml
<RecordType>
    <fullName>Portugal</fullName>
    <active>true</active>
    <label>Portugal</label>
</RecordType>